--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,25 +3,31 @@
   padding:0;
   font-family: sans-serif;
   background: white;
+
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 10% 20% 20% 20% 20%;
 }
 
 
 .header{
-    background-color: #12d16e;
-    color: white;
+    
+    color: rgb(0, 0, 0);
     width: 100%;
     height: 100px;
-    display: block;
+    display: grid;
     flex: right;
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.3);
-    color: white;
+    
+/* background-color:rgb(227, 247, 55); */
+    grid-column: 1 / span 6;
+    
 }
 .poly{
-    color: white;
+    color: black;
 }
 .base{
-    color: white;
+    color: black;
 }
 .right_btns{
     float: right;
@@ -46,7 +52,7 @@
     border-radius: 2px;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: rgb(0, 0, 0);
     border-bottom: 1px solid #fff;
     outline: none;
     background: transparent;
@@ -58,25 +64,22 @@
     height: 50px;
     width: 100px;
     border: none;
-    curser: pointer;
+    cursor: pointer;
     text-align: center;
     border-radius: 5px;
     background: rgba(0, 0, 0, .5);
     box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    color: white;
+    
+    color: rgb(0, 0, 0);
 }
 .search-btn:hover{
     background: rgba(0, 0, 0, .5);
   color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 5px #fff,
-              0 0 25px #fff,
-              0 0 50px #fff,
-              0 0 100px #fff;
+  
 }
 #nav-link{
-    color: white;
+    color: rgb(0, 0, 0);
     padding: 10px;
 
 }
@@ -84,26 +87,8 @@
     color: white;
 } */
 .right_btns button{
-    height: 50px;
-    width: 100px;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-    border-radius: 5px;
-    background: rgba(0, 0, 0, .5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    color: white;
 }
-.right_btns button:hover{
-    background: rgba(0, 0, 0, .5);
-  color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 5px #fff,
-              0 0 25px #fff,
-              0 0 50px #fff,
-              0 0 100px #fff;
-}
+
 .right_btns span{
     color: black;
     border: none;
@@ -113,4 +98,18 @@
     text-align: center;
     border-radius: 40%;
     font-size: 14px;
+}
+
+.content{
+    grid-column: 2 / span 4;
+    display: grid;
+}
+
+
+
+
+
+.footer {
+    background-color: yellowgreen;
+    grid-column: 5 / span 4;
 }
