--- a/client/src/components/styles/home.css
+++ b/client/src/components/styles/home.css
@@ -1,13 +1,29 @@
 .home{
     background-color: white;
     width: 100%;
-    height: 550px;
+    height: 100%;
+    padding: 20px;
+
+    display: grid;
+    grid-gap: 5px;
+    grid-template-columns: 15% 70% 15%;
+    background-color: rgb(206, 171, 171);
 }
 .categories{
-    background-color: rgb(20,45,50);
-    width: 200px;
+    background-color: rgb(53, 149, 168);
+    width: 100%;
     height: 100%;
     float: left;
-    margin-left: 20px;
+    
     color: white;
+    border-radius: 5px;
+
+    grid-column: 1;
+    grid-row: 1 / span 5;
+}
+.home-box{
+    grid-column: 2 ;
+    grid-row: 2 / span 5;
+    background-color: yellow;
+    border-radius: 5px;
 }
