--- a/client/src/components/styles/home.css
+++ b/client/src/components/styles/home.css
@@ -5,7 +5,7 @@
     padding: 20px;
 
     display: grid;
-    grid-gap: 5px;
+    grid-gap: 10px;
     grid-template-columns: 15% 70% 15%;
     background-color: rgb(206, 171, 171);
 }
@@ -19,11 +19,44 @@
     border-radius: 5px;
 
     grid-column: 1;
-    grid-row: 1 / span 5;
+    grid-row: 1 / span 6;
 }
 .home-box{
     grid-column: 2 ;
     grid-row: 2 / span 5;
     background-color: yellow;
     border-radius: 5px;
+}
+.help{
+    grid-column: 3;
+    grid-row: 1 / span 6;
+    border-radius: 5px;
+    background-color:rgb(53, 149, 168);
+}
+
+.category-directory{
+    grid-column: 1 / span 2;
+    grid-row: 7;
+    padding: 50px;
+    border-radius: 5px;
+
+    background-color:rgb(53, 149, 168);
+    
+}
+
+.products{
+    grid-column: 1 / span 3;
+    grid-row: 8;
+    list-style: none;
+    display: grid;
+    
+}
+
+.product-item{
+    background-color:aquamarine;
+    float: left;
+    padding: 10%;
+    list-style: none;
+    margin: 5px;
+
 }
