--- a/client/src/components/styles/login.css
+++ b/client/src/components/styles/login.css
@@ -2,16 +2,15 @@ html {
     height: 100%;
 }
 .login-page{
-    background-color: #12d16e;
-    height: 500px;
+
+    height: 100%;
     width: 400px;
     float: right;
-    margin-right: 20px;
-    margin-top: 20px;
+   
     padding: 60px;
     border: none;
     border-radius: 150px 50px 150px 2px;
-    color: white;
+    color: rgb(0, 0, 0);
     justify-content: center;
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
@@ -20,7 +19,7 @@ html {
 .login-page h1{
     margin: 0 0 30px;
   padding: 0;
-  color: #fff;
+  color: rgb(0, 0, 0);
   text-align: center;
 }
 
@@ -31,40 +30,35 @@ html {
     position: absolute;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
+    color: rgb(0, 0, 0);
     pointer-events: none;
     transition: .5s;
 }
 .login .input-control{
     border: none;
-    margin-left: 20px;
-    margin-top: 30px;
+   
+    margin-top: 20px;
+    margin-bottom: 20px;
     width: 100%;
     border-radius: 2px;
     padding: 10px 0;
     font-size: 16px;
-    color: #fff;
-    border-bottom: 1px solid #fff;
+   
+    border-bottom: 1px solid rgb(0, 0, 0);
     outline: none;
     background: transparent;
 }
 
-.login .input-control:focus ~ label,
-.login .input-control:valid ~ label{
-    top: -20px;
-    left: 0;
-    color: #0cd7e2;
-    font-size: 12px;
-}
-.btn-login{
+
+.login .btn-login{
     height: 50px;
-    width: 100px;
+    width: 100%;
     border: none;
     cursor: pointer;
     display: block;
     text-align: center;
     margin-top: 50px;
-    margin-left: 60px;
+    margin-left: 130px;
     border-radius: 5px;
     transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, .5);
@@ -73,11 +67,33 @@ html {
     color: white;
 }
 .btn-login:hover{
-    background: #12d16e;
+    background: #000000;
   color: #fff;
   border-radius: 5px;
   box-shadow: 0 0 5px #fff,
               0 0 25px #fff,
               0 0 50px #fff,
-              0 0 100px #fff;
+              0 0 100px rgb(0, 0, 0);
+}
+
+.checkbox {
+    float: left;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 60% 40%;
+    
+}
+.checkbox label{
+    
+    grid-column: 1;
+    grid-row: 1;
+    
+   
+}
+.checkbox p {
+
+    cursor: pointer;
+    grid-column: 2;
+    grid-row: 1;
+    margin-left: 50px;
 }
