--- a/client/src/components/styles/login.css
+++ b/client/src/components/styles/login.css
@@ -7,13 +7,14 @@ html {
     width: 400px;
     float: right;
    
-    padding: 60px;
+    padding: 100px;
     border: none;
     border-radius: 150px 50px 150px 2px;
     color: rgb(0, 0, 0);
     justify-content: center;
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
+    
 
 }
 .login-page h1{
@@ -28,7 +29,7 @@ html {
     margin-top: 20px;
     display: block; */
     position: absolute;
-    padding: 10px 0;
+    padding: 0px ;
     font-size: 16px;
     color: rgb(0, 0, 0);
     pointer-events: none;
@@ -40,7 +41,7 @@ html {
     margin-top: 20px;
     margin-bottom: 20px;
     width: 100%;
-    border-radius: 2px;
+    
     padding: 10px 0;
     font-size: 16px;
    
@@ -58,7 +59,7 @@ html {
     display: block;
     text-align: center;
     margin-top: 50px;
-    margin-left: 130px;
+    margin-left: 110px;
     border-radius: 5px;
     transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, .5);
@@ -77,16 +78,23 @@ html {
 }
 
 .checkbox {
-    float: left;
-    padding: 20px;
+
+    
     display: grid;
-    grid-template-columns: 60% 40%;
+    grid-template-columns:70% 30%;
+    
+}
+.checkbox input{
+    grid-column: 1;
+    grid-row: 1;
     
 }
 .checkbox label{
     
     grid-column: 1;
     grid-row: 1;
+    
+    margin-left: 20px;
     
    
 }
