--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,10 +23,17 @@
     
 /* background-color:rgb(227, 247, 55); */
     grid-column: 1 / span 6;
+
+  
     
 }
 .poly{
     color: black;
+}
+.poly:hover{
+    border: none;
+    outline: none;
+    text-decoration: none;
 }
 .base{
     color: black;
@@ -55,11 +62,13 @@
     padding: 10px 0;
     font-size: 16px;
     color: rgb(0, 0, 0);
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(143, 11, 11);
     outline: none;
     background: transparent;
-    padding: 10px;
+    
     margin-right: 20px;
+
+    box-shadow: 0 15px 25px rgb(231, 189, 189);
     
 }
 .search-btn{
@@ -116,6 +125,17 @@
     text-align: center;
     border-radius: 40%;
     font-size: 14px;
+}
+.right_btns span:hover{
+    color: black;
+    border: none;
+    background: rgb(227, 247, 55);
+    margin: 10px;
+    padding-left: 8px;
+    text-align: center;
+    border-radius: 40%;
+    font-size: 14px;
+    text-decoration: none;
 }
 
 .content{
