--- a/client/src/components/styles/login.css
+++ b/client/src/components/styles/login.css
@@ -14,6 +14,8 @@ html {
     justify-content: center;
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
+
+    background-color: rgb(251,195,170);
     
 
 }
@@ -104,4 +106,13 @@ html {
     grid-column: 2;
     grid-row: 1;
     margin-left: 50px;
+}
+
+.banner{
+    background-color: rgb(251,195,170);
+    float: left;
+    margin-left: 0;
+    height: 100%;
+    width: 50%;
+    object-fit: contain;
 }
