--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
   margin:0;
   padding:0;
   font-family: sans-serif;
-  background: white;
+  background: rgb(40,40,40);
 
   display: grid;
   grid-gap: 10px;
@@ -119,7 +119,7 @@
 .right_btns span{
     color: black;
     border: none;
-    background: rgb(227, 247, 55);
+    background: rgb(40,40,40);
     margin: 10px;
     padding-left: 8px;
     text-align: center;
@@ -129,7 +129,7 @@
 .right_btns span:hover{
     color: black;
     border: none;
-    background: rgb(227, 247, 55);
+    background: rgb(40,40,40);
     margin: 10px;
     padding-left: 8px;
     text-align: center;
