--- a/client/src/components/styles/home.css
+++ b/client/src/components/styles/home.css
@@ -7,7 +7,7 @@
     display: grid;
     grid-gap: 10px;
     grid-template-columns: 15% 70% 15%;
-    background-color: rgb(206, 171, 171);
+    background-color: rgb(40,40,40);
 }
 .categories{
     background-color: rgb(53, 149, 168);
