--- a/client/src/components/styles/login.css
+++ b/client/src/components/styles/login.css
@@ -6,7 +6,7 @@ html {
     height: 100%;
     width: 400px;
     float: right;
-   
+    color: white;
     padding: 100px;
     border: none;
     border-radius: 150px 50px 150px 2px;
@@ -15,14 +15,14 @@ html {
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0,0,0,.6);
 
-    background-color: rgb(251,195,170);
+    background-color: rgb(40,40,40);
     
 
 }
 .login-page h1{
     margin: 0 0 30px;
   padding: 0;
-  color: rgb(0, 0, 0);
+  color: white;
   text-align: center;
 }
 
@@ -30,16 +30,17 @@ html {
     /* text-decoration: none;
     margin-top: 20px;
     display: block; */
+    color: white;
     position: absolute;
     padding: 0px ;
     font-size: 16px;
-    color: rgb(0, 0, 0);
+    
     pointer-events: none;
     transition: .5s;
 }
 .login .input-control{
     border: none;
-   
+    color: white;
     margin-top: 20px;
     margin-bottom: 20px;
     width: 100%;
@@ -73,10 +74,7 @@ html {
     background: #000000;
   color: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 5px #fff,
-              0 0 25px #fff,
-              0 0 50px #fff,
-              0 0 100px rgb(0, 0, 0);
+ 
 }
 
 .checkbox {
@@ -84,11 +82,13 @@ html {
     
     display: grid;
     grid-template-columns:70% 30%;
+    color: white;
     
 }
 .checkbox input{
     grid-column: 1;
     grid-row: 1;
+    color: white;
     
 }
 .checkbox label{
@@ -97,6 +97,7 @@ html {
     grid-row: 1;
     
     margin-left: 20px;
+    color: white;
     
    
 }
@@ -106,13 +107,15 @@ html {
     grid-column: 2;
     grid-row: 1;
     margin-left: 50px;
+    color: white;
 }
 
 .banner{
-    background-color: rgb(233, 214, 204);
+    background-color: rgb(40,40,40);
     float: left;
     margin-left: 0;
     height: 100%;
     width: 50%;
     object-fit: contain ;
+    color: white;
 }
