--- a/client/src/components/styles/home.css
+++ b/client/src/components/styles/home.css
@@ -78,6 +78,4 @@
     border-radius: 5px;
     background: rgba(0, 0, 0, .5);
     box-sizing: border-box;
-    
-    color: rgb(0, 0, 0);
-}
+    a
